Fixed the project header right column width to prevent layout shift

--- a/funnel/assets/sass/pages/project.scss
+++ b/funnel/assets/sass/pages/project.scss
@@ -459,7 +459,7 @@
       }
     }
     .project-banner__right {
-      width: auto;
+      width: 33%;
     }
   }
   .project-banner.project-banner--inner {
@@ -467,7 +467,7 @@
       width: 25%;
     }
     .project-banner__right--smaller {
-      width: auto;
+      width: 75%;
     }
   }
 }
